--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,39 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: 0 20px;
+}
+
+thead {
+  background-color: #F5F5F5;
+}
+
+th,
+td {
+  width: 300px;
+  padding: 10px 20px;
+  border: 3px solid #058;
+  text-align: center;
+}
+
+button{
+    display: inline-block;
+    padding: 6px 12px;
+    margin: 3px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  input{padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;}
